--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
         "no-console": "warn",
         "comma-spacing": ["error", { "before": false, "after": true }],
         "no-multiple-empty-lines": ["error", { "max": 1 }],
+        "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
         "space-before-function-paren": ["error", { "anonymous": "never", "named": "never", "asyncArrow": "always" }],
         "arrow-spacing": ["error", { "before": true, "after": true }],
         "object-curly-spacing": ["error", "always"]
