--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -62,6 +64,6 @@
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.2",
     "http-status": "^1.5.3",
-    "win-node-env": "^0.6.1"
+    "jsonwebtoken": "^8.5.1"
   }
 }
