--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,29 +4,58 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDirs": ["./src", "./tests"],
+    "rootDirs": [
+      "./src",
+      "./tests"
+    ],
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@types": ["./src/@types/index.ts"],
-      "@config": ["./src/config/index.ts"],
-      "@controllers": ["./src/controllers/index.ts"],
-      "@errors": ["./src/errors/index.ts"],
-      "@middlewares": ["./src/middlewares/index.ts"],
-      "@repositories": ["./src/repositories/index.ts"],
-      "@routers": ["src/routers/index.ts"],
-      "@schemas": ["./src/schemas/index.ts"],
-      "@services": ["./src/services/index.ts"],
-      "@tests/*": ["./tests/*"],
-      "@*": ["./src/*"]
+      "@src/*": [
+        "./src/*"
+      ],
+      "@types": [
+        "./src/@types/index.ts"
+      ],
+      "@config": [
+        "./src/config/index.ts"
+      ],
+      "@controllers/*": [
+        "./src/controllers/*"
+      ],
+      "@errors": [
+        "./src/errors/index.ts"
+      ],
+      "@middlewares": [
+        "./src/middlewares/index.ts"
+      ],
+      "@repositories": [
+        "./src/repositories/index.ts"
+      ],
+      "@routers": [
+        "src/routers/index.ts"
+      ],
+      "@schemas": [
+        "./src/schemas/index.ts"
+      ],
+      "@services/*": [
+        "./src/services/*"
+      ],
+      "@tests/*": [
+        "./tests/*"
+      ]
     }
   },
   "ts-node": {
     "esm": true,
     "transpileOnly": true
   },
-  "include": ["src", "tests"]
+  "include": [
+    "src",
+    "tests",
+    "modules.d.ts"
+  ]
 }
