--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "author": "Paulo Serrano",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
