--- a/package.json
+++ b/package.json
@@ -36,12 +36,10 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
-    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
@@ -65,6 +63,7 @@
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.2",
     "http-status": "^1.5.3",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
